...
                android:paddingTop="5dp"
                android:text="@string/year"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white" />

            <com.nw.widget.CustomEditText
                android:id="@+id/edYear"
                style="@style/EditTextStyleDropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:hint="@string/select_year" />
        </TableRow>
...
                android:paddingTop="5dp"
                android:text="@string/m_and_m_code"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white" />

            <com.nw.widget.CustomEditText
                android:id="@+id/edMMCode"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:inputType="number"
                android:maxLength="8" />
...
                android:paddingTop="5dp"
                android:text="Kilometers*"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white" />

            <com.nw.widget.CustomEditText
                android:id="@+id/edKilometers"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:inputType="number" />
        </TableRow>
...
                android:background="@drawable/rectangle_dark_blue"
                android:text="@string/update"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/addLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:visibility="visible" >

            <com.nw.widget.CustomButton
                android:id="@+id/btnSynopsisSummary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                style="@style/BlueButtonStyle"
                android:text="Continue to Synopsis Summary"
                />

            <com.nw.widget.CustomButton
                android:id="@+id/btnVINVerify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
