<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginActivity" >

    <!-- Login progress -->

    <LinearLayout
        android:id="@+id/login_status"
        style="@style/LoginFormContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/login_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/login_progress_signing_in"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />
    </LinearLayout>

    <!-- join now view -->

    <LinearLayout
        android:id="@+id/lv_join_now"
        style="@style/LoginFormContainer"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <LinearLayout
            android:id="@+id/llJoinViewContainer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.0"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <com.nw.widget.CustomTextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/smart_manager"
                android:textSize="30sp" />

            <com.nw.widget.CustomButtonLight
                android:id="@+id/btnInfoJoinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="10dp"
                android:background="#00000000"
                android:gravity="left|center_vertical"
                android:text="@string/join_now"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_background_edittext"
                android:orientation="vertical"
                android:padding="15dp" >

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <com.nw.widget.CustomTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.65"
                        android:text="@string/email"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <com.nw.widget.CustomTextView
                        android:id="@+id/tvContact"
                        style="@style/BlueText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.35"
                        android:text="@string/support_email_id"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp" >

                    <com.nw.widget.CustomTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.65"
                        android:text="@string/phone"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <com.nw.widget.CustomTextView
                        android:id="@+id/tvPhone"
                        style="@style/BlueText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.35"
                        android:text="@string/support_phone_no"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </TableRow>
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:contentDescription="@null"
            android:src="@drawable/powered_by_ix" />
    </LinearLayout>

    <!-- Login form -->

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:visibility="visible" >

        <LinearLayout
            style="@style/LoginFormContainer"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/llLoginContainer"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.0"
                android:gravity="center_vertical"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/ivCompanyLogo"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/company_logo_dimen_login"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@null"
                    android:visibility="gone" />

                <com.nw.widget.CustomTextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/smart_manager"
                    android:textSize="30sp" />

                <com.nw.widget.CustomEditText
                    android:id="@+id/email"
                    style="@style/SingleLineEdittextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:hint="@string/prompt_username"
                    android:inputType="textEmailAddress" />

                <com.nw.widget.CustomEditText
                    android:id="@+id/password"
                    style="@style/SingleLineEdittextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawablePadding="10dp"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp" >

                    <com.nw.widget.CustomButton
                        android:id="@+id/btnJoinNow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:background="#00000000"
                        android:gravity="left|center_vertical"
                        android:paddingBottom="10dp"
                        android:paddingRight="15dp"
                        android:paddingTop="10dp"
                        android:text="@string/join_now"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/white" />

                    <com.nw.widget.CustomTextViewLight
                        android:id="@+id/tvForgotLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center_vertical"
                        android:text="@string/forgot_login_details"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/white"
                        android:visibility="gone" />

                    <com.nw.widget.CustomButton
                        android:id="@+id/sign_in_button"
                        style="@style/BlueButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:paddingBottom="10dp"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:paddingTop="10dp"
                        android:text="@string/action_sign_in_register" />
                </RelativeLayout>

                <com.nw.widget.CustomButton
                    android:id="@+id/btnJoinNow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@null"
                    android:paddingBottom="10dp"
                    android:paddingRight="15dp"
                    android:paddingTop="10dp"
                    android:text="@string/join_now"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/white"
                    android:visibility="gone" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:contentDescription="@null"
                android:src="@drawable/powered_by_ix" />
        </LinearLayout>
    </ScrollView>

</merge>