<merge xmlns:android="http://schemas.android.com/apk/res/android" >

    <RelativeLayout
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bar_color"
        android:gravity="center_vertical"
        android:padding="5dp" >

        <FrameLayout
            android:id="@+id/FrameLayout1"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp" >

            <ProgressBar
                android:id="@+id/pBarHome"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:paddingLeft="20dp" />

            <ImageView
                android:id="@+id/ivCompanyLogo"
                android:layout_width="wrap_content"
                android:padding="10dp"
                android:layout_height="wrap_content"
                android:contentDescription="@null" />
        </FrameLayout>

        <com.nw.widget.CustomTextView
            android:id="@+id/ivHome"
            style="@style/SingleLineWhiteText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/home"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>

</merge>