<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llHome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical" >

    <RelativeLayout
...
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/gray" /> -->

        <GridView
            android:layout_marginRight="-3dp"
            android:id="@+id/expandableHeightGridView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grid_background"
            android:horizontalSpacing="1dp"
            android:numColumns="3"
            android:scrollbars="none"
...
